Grinder 3.0-beta17
------------------


Grinder 3.0-beta16
------------------

  Multicast is no longer used for distributing console messages
  signals.

  Multicast has been a frequent source of newbie problems, and has
  also made The Grinder unreasonably hard to use with some corporate
  network configurations. Console messages are now sent over TCP
  connections to the agent processes, which fan-out the signals to
  their worker processes. The processing is multi-threaded and
  asynchronous and I expect it to scale well.

  IMPORTANT: The communication properties have changed. The following
  properties can be set in grinder.properties:

    grinder.consoleHost	  (previously grinder.consoleAddress)
    grinder.consolePort
    grinder.useConsole    (previously grinder.receiveConsoleSignals /
	                   grinder.reportToConsole)

  The grinder.grinderAddress and grinder.grinderPort properties have
  been removed. Corresponding changes have been made to the console
  options dialog.


Grinder 3.0-beta15
------------------

  The use of the implicit 'grinder' script context object is
  deprecated. You should explicitly "from net.grinder.Grinder import
  grinder" in your scripts to ensure they remain compatible with
  future releases.

  Fix bug 810532 - problems invoking methods. You can now wrap Jython
  objects that are subclassed from Java objects. Thanks to Karl Wyer
  for the report, and also to John Stanford White for requesting this.

  HTTPPluginTCPProxyFilter now records the User-Agent header. Thanks
  to Danny Faught for pointing out the opportunity.

  Fix bug 852217 - sample interval jumps after I set it. Thanks to
  Danny Faught for the report.

  Fix/enhance the TCPProxy's support for chained HTTPS proxies. This
  should now work with a wider range of proxies.

  Improved console error handling.

  Fix bug 852298 - null pointer exception when multicast fails. Thanks
  to Danny Faught for the report.
